# raylib_games

./: .gitignore
00_cpp_template/: .clang-format  .gitignore  CMakeLists.txt
00_cpp_template/src/: CMakeLists.txt  main.cpp
00_odin_template/: main.odin
00_zig_template/: build.zig
00_zig_template/src/: main.zig
01_cpp_breakout/: .clang-format  CMakeLists.txt
01_cpp_breakout/src/: main.cpp
01_odin_breakout/: main.odin  odinfmt.json
01_zig_breakout/: build.zig  build.zig.zon
01_zig_breakout/src/: main.zig
02_odin_snake/: main.odin
02_zig_snake/: build.zig
02_zig_snake/src/: main.zig
